--- a/A2S/A2S.csproj
+++ b/A2S/A2S.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>A2S</AssemblyName>
     <RootNamespace>A2S</RootNamespace>
+    <Authors>Jason Thompson</Authors>
+    <Description>A .NET5 implementation of Steams A2S Server queries.</Description>
+    <Copyright />
+    <PackageProjectUrl>https://github.com/Crytilis/A2S</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Crytilis/A2S</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\jason\source\repos\Crytilis\A2S\A2S\A2S.xml</DocumentationFile>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
 
 </Project>
